@@ -40,22 +40,26 @@
   (defcustom left-right-edge-action 'none/hot-spot
     "Action for the left and right screen-edge."
     :group edge-actions
-    :type (choice none/hot-spot viewport-drag flip-workspace flip-viewport tile-windows))
+    :type (choice none/hot-spot viewport-drag flip-workspace
+		  flip-viewport tile-windows))
 
   (defcustom left-right-edge-move-action 'none/hot-move
     "Action for the left and right screen-edge while moving a window."
     :group edge-actions
-    :type  (choice none/hot-move viewport-drag flip-workspace flip-viewport tile-windows expand-window))
+    :type  (choice none/hot-move viewport-drag flip-workspace
+		   flip-viewport tile-windows expand-window maximize-window))
 
   (defcustom top-bottom-edge-action 'none/hot-spot
     "Action for the top and bottom screen-edge."
     :group edge-actions
-    :type (choice none/hot-spot viewport-drag flip-workspace flip-viewport tile-windows))
+    :type (choice none/hot-spot viewport-drag flip-workspace
+		  flip-viewport tile-windows))
 
   (defcustom top-bottom-edge-move-action 'none/hot-move
     "Action for the top and bottom screen-edge while moving a window."
     :group edge-actions
-    :type  (choice none/hot-move viewport-drag flip-workspace flip-viewport tile-windows expand-window))
+    :type  (choice none/hot-move viewport-drag flip-workspace
+		   flip-viewport tile-windows expand-window maximize-window))
 
   (defcustom edge-flip-delay 250
     "Delay (in milliseconds) of flipping of viewport / workspace."
