@@ -8,6 +8,11 @@
 	EdgeActions. expand-window-half-screen-vertical and
 	expand-window-half-screen-horizontal are the public functions.
 
+	* lisp/sawfish/wm/edge/actions.jl
+	* lisp/sawfish/wm/edge/conf.jl
+	* lisp/sawfish/wm/edge/maxmize.jl: added an maximize-window
+	edge-action
+
 2011-07-09  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/edge/actions.jl: fixed calling tile-windows
 
